--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-177.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-702.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-606.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-874.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.28MB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-796.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-471.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-771.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-515.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-583.6KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-348.7KB/s(Youtube:不良林), server: 194.156.231.248, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-863.3KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-662.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
