--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-796.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-471.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-771.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-606.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-585.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-515.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇯🇵 日本-583.6KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-348.7KB/s(Youtube:不良林), server: 194.156.231.248, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-771.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
