--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-796.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-606.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-585.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-515.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-583.6KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-348.7KB/s(Youtube:不良林), server: 194.156.231.248, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-863.3KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-662.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 120.233.151.171, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-220.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-200.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-233.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-215.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-236.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-247.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-796.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-515.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-583.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
