--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-912.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-403.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-198.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇦 加拿大-946.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-863.3KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 120.233.151.171, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇳 中国-220.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-200.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-233.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-215.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-912.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-403.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-946.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-200.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-233.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
